--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-     <h1>Welcome</h1>
+     <h1 class="center">Welcome</h1>
+     <br>
+     <hr>
+     <h2>Sub-Heading</h2>
 </body>
 
 </html>
